--- a/front-end/src/i18n/locales/fa.json
+++ b/front-end/src/i18n/locales/fa.json
@@ -16,13 +16,22 @@
     "loading": "در حال بارگذاری...",
     "error": "خطا",
     "success": "موفقیت",
+    "warning": "هشدار",
+    "info": "اطلاعات",
     "search": "جستجو",
     "noData": "داده‌ای وجود ندارد",
     "yes": "بله",
     "no": "خیر",
     "all": "همه",
+    "none": "هیچ‌کدام",
     "status": "وضعیت",
-    "currency": "ریال"
+    "currency": "ریال",
+    "errors": { "required": "ورود کد الزامیست" },
+    "showing": "نمایش",
+    "to": "تا",
+    "of": "از",
+    "totalRow": "نتایج",
+    "actions": "عملیات"
   },
   "health": {
     "title": "سلامت سرویس",
@@ -30,6 +39,9 @@
   },
   "fetch": {
     "error": "دریافت وضعیت سلامت ناموفق بود"
+  },
+  "errors": {
+    "unknown": "خطای ناشناخته رخ داد"
   },
   "auth": {
     "title": "ورود",
@@ -54,7 +66,19 @@
   "navigation": {
     "login": "ورود",
     "profile": "پروفایل",
-    "logout": "خروج"
+    "logout": "خروج",
+    "dashboard": "داشبورد",
+    "accounts": "حساب‌ها",
+    "journals": "روزنامه‌ها",
+    "invoices": "فاکتورها",
+    "parties": "اشخاص",
+    "warehouses": "انبارها",
+    "reports": "گزارش‌ها",
+    "codes": "حساب‌ها",
+    "details": "تفصیلی‌ها",
+    "detailLevels": "سطوح تفصیلی",
+    "fiscalYears": "سال‌های مالی",
+    "quickLinks": "میانبرها"
   },
   "actions": {
     "reset": "بازنشانی",
@@ -62,14 +86,123 @@
     "change": "تغییر",
     "remove": "حذف",
     "create": "ایجاد",
+    "createUnder": "ایجاد زیرمجموعه",
+    "clear": "حذف",
+    "save": "ذخیره",
+    "delete": "حذف",
     "saving": "در حال ذخیره...",
     "back": "بازگشت",
     "apply": "اعمال",
     "confirm": "تایید",
+    "confirmDelete": "از حذف اطمینان دارید؟",
     "cancel": "لغو",
-    "edit": "ویرایش"
+    "edit": "ویرایش",
+    "ok": "تایید"
+  },
+  "labels": {
+    "root": "ریشه",
+    "child": "فرزند",
+    "none": "هیچ‌کدام"
+  },
+  "pages": {
+    "reports": {
+      "title": "گزارش‌ها",
+      "filters": "فیلترها",
+      "trialBalance": "تراز آزمایشی",
+      "balanceSheet": "ترازنامه",
+      "profitLoss": "سود و زیان"
+    },
+    "fiscalYears": {
+      "title": "سال‌های مالی",
+      "create": "ایجاد سال مالی",
+      "list": "فهرست سال‌های مالی"
+    },
+    "codes": {
+      "title": "مدیریت حساب‌ها",
+      "create": "افزودن کد",
+      "edit": "ویرایش کد",
+      "tree": "حساب‌ها",
+      "codeOrTitle": "جستجو کد و عنوان",
+      "groupCodeLength": "کد گروه باید ۲ رقمی باشد.",
+      "generalCodeLength": "کد عمومی باید ۴ رقمی باشد.",
+      "specificCodeLength": "کد اختصاصی باید ۶ رقمی باشد.",
+      "kind": {
+        "general": "کل",
+        "specific": "معین",
+        "group": "گروه"
+      },
+      "noParent": "بدون والد",
+      "conflict": "این کد قبلا ثبت شده است.",
+      "mustPickGroupParent": "برای نوع عمومی، والد باید گروه باشد.",
+      "mustPickGeneralParent": "برای نوع اختصاصی، والد باید عمومی باشد.",
+      "nature": {
+        "creditor": "بستانکار",
+        "debitor": "بدهکار"
+      },
+      "deleteConfirmTitle": "حذف کد",
+      "deleteConfirmMessage": "حذف {code} — {title}؟",
+      "deleteConfirmCascade": "این کد و همه زیرمجموعه‌های آن حذف شود؟",
+      "deletedCascade": "کد و همه زیرمجموعه‌های آن حذف شدند.",
+      "createUnder": "ایجاد آیتم کد جدید",
+      "cannotCreateUnderSpecific": "امکان ایجاد زیرمجموعه برای کد خاص وجود ندارد"
+    },
+    "details": {
+      "title": "مدیریت تفصیلی‌ها",
+      "list": "فهرست تفصیلی‌ها",
+      "create": "ایجاد تفصیلی",
+      "edit": "ویرایش تفصیلی",
+      "addEdit": "افزودن",
+      "linkedLevels": "سطوح تفصیلی مرتبط",
+      "leafOnlyHint": "تنها سطوح برگ قابل ارتباط هستند.",
+      "deleteConfirm": "این تفصیلی حذف شود؟"
+    },
+    "detailLevels": {
+      "treeTitle": "سطوح تفصیلی",
+      "createTitle": "ایجاد سطح تفصیلی",
+      "editTitle": "ویرایش سطح تفصیلی",
+      "searchPlaceholder": "جستجوی کد یا عنوان",
+      "actions": { "createRoot": "ایجاد ریشه" },
+      "errors": {
+        "rootRequiresSpecific": "سطح ریشه باید کد معین داشته باشد",
+        "nonRootCannotHaveSpecific": "سطح غیرریشه نمی‌تواند کد معین داشته باشد",
+        "codeExists": "کد سطح تفصیلی قبلاً ثبت شده است"
+      }
+    }
+  },
+  "fields": {
+    "fromDate": "از تاریخ",
+    "toDate": "تا تاریخ",
+    "fiscalYearId": "شناسه سال مالی",
+    "assets": "دارایی‌ها",
+    "liabilities": "بدهی‌ها",
+    "equity": "حقوق صاحبان سهام",
+    "revenue": "درآمد",
+    "expense": "هزینه",
+    "profit": "سود",
+    "code": "کد",
+    "name": "نام",
+    "debit": "بدهکار",
+    "credit": "بستانکار",
+    "nature": "ماهیت",
+    "startDate": "تاریخ شروع",
+    "endDate": "تاریخ پایان",
+    "status": "وضعیت",
+    "closed": "بسته",
+    "open": "باز",
+    "title": "عنوان",
+    "kind": "نوع",
+    "parent": "والد",
+    "codeId": "شناسه کد",
+    "specificCode": "کد معین",
+    "isActive": "فعال"
   },
   "validation": {
-    "noItems": "هیچ آیتمی برای ارسال وجود ندارد"
+    "noItems": "هیچ آیتمی برای ارسال وجود ندارد",
+    "missingFields": "لطفاً همه فیلدها را پر کنید",
+    "noParent": "والد ندارد",
+    "groupCodeLength": "کد گروه باید ۲ رقمی باشد.",
+    "generalCodeLength": "کد کل باید ۴ رقمی باشد.",
+    "specificCodeLength": "کد معین باید ۶ رقمی باشد.",
+    "conflict": "این کد قبلا ثبت شده است."
   }
 }
