--- a/front-end/src/i18n/locales/en/common.json
+++ b/front-end/src/i18n/locales/en/common.json
@@ -45,6 +45,7 @@
   "actions.edit": "Edit",
   "actions.delete": "Delete",
   "actions.deleteDocument": "Delete Document",
+  "actions.deleteDocumentFromJournal": "Delete the document from the journal",
   "actions.print": "Print",
   "navigation.treasuryPayments": "Payments",
   "pages.receipts.list": "Receipts",
@@ -64,10 +65,6 @@
   "pages.receipts.searchPlaceholder": "Search receipts",
   "pages.receipts.specialCode.noOptions": "No code found",
 
-  "status.draft": "Draft",
-  "status.posted": "Posted",
-  "status.temporary": "Temporary",
-  "status.permanent": "Permanent",
   "pages.payments.actions.new": "New Payment",
   "pages.payments.createTitle": "Create Payment",
   "pages.payments.editTitle": "Edit Payment",
@@ -96,10 +93,23 @@
   "pages.payments.total": "Total",
   "pages.payments.list": "Payments List",
   "pages.payments.deleted": "Deleted successfully",
+  "pages.payments.confirmDeleteDocument": "Delete the document created from this payment?",
+  "pages.payments.documentDeleted": "Document deleted successfully",
   "pages.payments.searchPlaceholder": "Search payments",
   "pages.payments.payer.noOptions": "No receiver found",
   "pages.payments.status.draft": "Draft",
   "pages.payments.status.posted": "Posted",
+  "pages.payments.status.sent": "Sent",
+  "pages.payments.fields.cashbox": "Cashbox",
+  "pages.payments.payer.noDetailsHelp": "No Details exist yet. ",
+  "pages.payments.payer.createDetailCta": "Create a Detail",
+  "pages.payments.payer.thenSelectHint": " and then select it here.",
+  "pages.payments.noSpecialCode": "No code found",
+
+  "status.draft": "Draft",
+  "status.posted": "Posted",
+  "status.temporary": "Temporary",
+  "status.permanent": "Permanent",
   "pages.payments.confirmDelete": "Delete this draft payment?",
   "actions.post": "Post",
   "pages.documentForm.status.temporary": "Temporary",
@@ -108,5 +118,7 @@
   "pages.receipts.status.sent": "Sent",
   "pages.documents.openReceipt": "Open Receipt",
   "pages.documents.deleteConfirmReceiptOrigin": "This document comes from a Treasury receipt. Deleting it will make the receipt temporary and remove its link.",
-  "pages.documents.receiptResolveError": "Could not locate receipt for this document"
+  "pages.documents.receiptResolveError": "Could not locate receipt for this document",
+  "validation.cashboxRequired": "Cashbox is required",
+  "validation.relatedInstrumentRequired": "Related instrument is required"
 }
