--- a/front-end/src/i18n/locales/fa/common.json
+++ b/front-end/src/i18n/locales/fa/common.json
@@ -37,6 +37,12 @@
 
   "navigation.treasuryReceipts": "دریافت‌ها",
   "navigation.treasuryPayments": "پرداخت‌ها",
+  "pages.fiscalYears.deleteConfirm": "این سال مالی حذف شود؟",
+  "pages.fiscalYears.deletedSuccess": "سال مالی حذف شد",
+  "pages.fiscalYears.deleteFailed": "حذف سال مالی با خطا مواجه شد",
+  "pages.fiscalYears.openFailed": "بازکردن سال مالی با خطا مواجه شد",
+  "pages.fiscalYears.openThis": "این سال مالی باز شود",
+  "pages.fiscalYears.alreadyOpen": "در حال حاضر باز است",
   "common.search": "جستجو",
   "common.loading": "در حال بارگذاری",
   "common.noData": "داده‌ای موجود نیست",
@@ -46,6 +52,7 @@
   "actions.edit": "ویرایش",
   "actions.delete": "حذف",
   "actions.deleteDocument": "حذف سند",
+  "actions.deleteDocumentFromJournal": "حذف سند از دفتر روزنامه",
   "actions.print": "چاپ",
   "actions.post": "ثبت",
 
@@ -61,6 +68,7 @@
   "pages.receipts.fields.status": "وضعیت",
   "pages.receipts.fields.specialCode": "کد ویژه",
   "pages.receipts.deleted": "با موفقیت حذف شد",
+  "pages.receipts.confirmDelete": "این دریافت پیش‌نویس حذف شود؟",
   "pages.receipts.confirmDeleteDocument": "سند ایجادشده از این دریافت حذف شود؟",
   "pages.receipts.documentDeleted": "سند با موفقیت حذف شد",
   "pages.receipts.searchPlaceholder": "جستجوی دریافت‌ها",
@@ -94,10 +102,18 @@
   "pages.payments.total": "جمع",
   "pages.payments.list": "فهرست پرداخت‌ها",
   "pages.payments.deleted": "با موفقیت حذف شد",
+  "pages.payments.confirmDelete": "این پرداخت پیش‌نویس حذف شود؟",
+  "pages.payments.confirmDeleteDocument": "سند ایجادشده از این پرداخت حذف شود؟",
   "pages.payments.searchPlaceholder": "جستجوی پرداخت‌ها",
   "pages.payments.payer.noOptions": "هیچ گیرنده‌ای یافت نشد",
   "pages.payments.status.draft": "پیش‌نویس",
   "pages.payments.status.posted": "ثبت‌شده",
+  "pages.payments.status.sent": "ارسال‌شده",
+  "pages.payments.fields.cashbox": "صندوق",
+  "pages.payments.payer.noDetailsHelp": "هنوز هیچ تفصیلی وجود ندارد. ",
+  "pages.payments.payer.createDetailCta": "ایجاد تفصیل",
+  "pages.payments.payer.thenSelectHint": " و سپس اینجا انتخاب کنید.",
+  "pages.payments.noSpecialCode": "کدی یافت نشد",
 
   "status.draft": "پیش‌نویس",
   "status.posted": "ثبت شده",
@@ -106,8 +122,22 @@
   "pages.documentForm.status.temporary": "موقت",
   "pages.documentForm.status.permanent": "دائمی",
 
+  "validation.cashboxRequired": "انتخاب صندوق الزامی است",
+  "validation.relatedInstrumentRequired": "انتخاب ابزار مرتبط الزامی است",
+
   "pages.receipts.status.sent": "ارسال‌شده",
+  "pages.checks.confirmSaveOutgoing": "چک صادره ذخیره شود؟",
+  "pages.checks.confirmSaveIncoming": "چک وارده ذخیره شود؟",
+  "pages.checks.confirmDeleteOutgoing": "این چک صادره حذف شود؟",
+  "pages.checks.confirmDeleteIncoming": "این چک وارده حذف شود؟",
   "pages.documents.openReceipt": "باز کردن دریافتی",
+  "pages.codes.deleteConfirmCascade": "این کد و همه زیرکدهای آن حذف شوند؟",
+  "pages.codes.deletedCascade": "کد و همه زیرکدها حذف شدند.",
   "pages.documents.deleteConfirmReceiptOrigin": "این سند از دریافتی خزانه‌داری ایجاد شده است. با حذف آن، وضعیت دریافتی «موقت» می‌شود و ارتباطش حذف خواهد شد.",
-  "pages.documents.receiptResolveError": "یافتن دریافتیِ مرتبط با این سند ممکن نیست"
+  "pages.documents.receiptResolveError": "یافتن دریافتیِ مرتبط با این سند ممکن نیست",
+  "pages.documents.deleteConfirm": "این سند پیش‌نویس حذف شود؟",
+  "bulkPostConfirmTitle": "ارسال گروهی اسناد",
+  "bulkPostConfirmMessage": "تمام اسناد انتخاب‌شده ارسال شوند؟",
+  "renumberConfirmTitle": "شماره‌گذاری مجدد",
+  "renumberConfirmMessage": "شماره‌گذاری اسناد انتخاب‌شده از ابتدا انجام شود؟"
 }
